feat(components): expose minDate and maxDate props from react-datepicker (JOB-40742) (#856)
* feat(DatePicker): add minDate and maxDate props and pass to ReactDatePicker

* feat(DatePicker): add css styling for disabled dates

* test(DatePicker): add tests related to disabled dates

* feat(InputDate): expose minDate and maxDate DatePicker's props

* test(InputDate): add tests related to disabled dates

* docs(DatePicker): add an example for disabling dates

* docs(InputDate): add example of minDate and maxDate usage

* docs(DatePicker): change section title to Restricting date ranges

* fix(DatePicker): inconsistent colors for the disabled month-changing buttons and the disabled dates

--- a/packages/components/src/DatePicker/DatePicker.css
+++ b/packages/components/src/DatePicker/DatePicker.css
@@ -59,7 +59,12 @@
 .datePicker :global(.react-datepicker__day--outside-month) {
   border-radius: 0;
   color: var(--color-text);
-  background: var(--color-surface--background);
+  background: var(--color-disabled--secondary);
+}
+
+.datePicker :global(.react-datepicker__day--disabled) {
+  color: var(--color-disabled);
+  cursor: default;
 }
 
 .datePicker :global(.react-datepicker__month) {
@@ -100,6 +105,20 @@
 .datePicker :global(.react-datepicker__day--selected):hover,
 .datePicker :global(.react-datepicker__day--selected):focus {
   background: var(--color-interactive--hover);
+}
+
+.datePicker :global(.react-datepicker__day--disabled):hover,
+.datePicker :global(.react-datepicker__day--disabled):focus {
+  box-shadow: none;
+  background: transparent;
+}
+
+.datePicker
+  :global(.react-datepicker__day--disabled.react-datepicker__day--outside-month):hover,
+.datePicker
+  :global(.react-datepicker__day--disabled.react-datepicker__day--outside-month):focus {
+  box-shadow: none;
+  background: var(--color-disabled--secondary);
 }
 
 .month {
