--- a/packages/components/src/LightBox/LightBox.css
+++ b/packages/components/src/LightBox/LightBox.css
@@ -8,7 +8,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: var(--color-greyBlue);
+  background-color: var(--color-overlay);
   opacity: 0.8;
 }
 
