--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -43,8 +43,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: var(--color-blue--dark);
-  opacity: 0.3;
+  background-color: var(--color-overlay);
   mix-blend-mode: multiply;
 }
 
