--- a/packages/components/src/Menu/Menu.css
+++ b/packages/components/src/Menu/Menu.css
@@ -108,12 +108,7 @@
   bottom: 0;
   left: 0;
   z-index: var(--elevation-menu);
-  background-color: rgba(
-    101,
-    120,
-    132,
-    0.8
-  ); /* until we figure out rgba + color vars... */
+  background-color: var(--color-overlay);
 
   @media (--medium-screens) {
     background-color: transparent;
