feat(design): update overlay color to black (#861)
* update overlay color to black

* remove unneeded opacity

* update outstanding overlay colors

--- a/packages/components/src/Modal/Modal.css
+++ b/packages/components/src/Modal/Modal.css
@@ -27,8 +27,7 @@
 }
 
 .overlay {
-  background-color: var(--color-greyBlue);
-  opacity: 0.8;
+  background-color: var(--color-overlay);
 }
 
 .modal {
