--- a/packages/components/src/LightBox/LightBox.css
+++ b/packages/components/src/LightBox/LightBox.css
@@ -8,8 +8,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: var(--color-greyBlue);
-  opacity: 0.8;
+  background-color: var(--color-overlay);
 }
 
 .wrapper:global(.ril__outer .ril__captionContent) {
