'Actually' fix double tab issue on multiselect chips

--- a/packages/components/src/Chips/InternalChip.css
+++ b/packages/components/src/Chips/InternalChip.css
@@ -59,17 +59,19 @@
  */
 
 .clickable:hover,
-.chip:focus,
-.input:focus ~ .chip:not(.active) {
+.chip:focus {
   outline: none;
   background-color: var(--color-surface--hover);
 }
 
-/* Disabling since this is a valid css order */
-/* stylelint-disable-next-line no-descending-specificity */
 .chip:focus,
-.input:focus ~ .chip:not(.active) {
+.input:focus ~ .chip {
   box-shadow: var(--shadow-focus);
+}
+
+.input:focus ~ .chip:not(.active) {
+  outline: none;
+  background-color: var(--color-surface--hover);
 }
 
 /**
