--- a/packages/components/src/Chips/InternalChip.css
+++ b/packages/components/src/Chips/InternalChip.css
@@ -58,19 +58,19 @@
  * Interaction
  */
 
-.chip:focus,
-.input:focus ~ .chip {
+.clickable:hover,
+.chip:focus {
   outline: none;
+  background-color: var(--color-surface--hover);
 }
 
-.clickable:focus,
+.chip:focus,
 .input:focus ~ .chip {
   box-shadow: var(--shadow-focus);
 }
 
-.clickable:hover,
-.clickable:focus,
 .input:focus ~ .chip:not(.active) {
+  outline: none;
   background-color: var(--color-surface--hover);
 }
 
