--- a/packages/components/src/RadioGroup/RadioGroup.css
+++ b/packages/components/src/RadioGroup/RadioGroup.css
@@ -11,8 +11,9 @@
 
 .label {
   display: inline-flex;
-  align-items: center;
+  font-size: var(--typography--fontSize-base);
   cursor: pointer;
+  align-items: center;
 }
 
 .input + .label::before {
