add delete button functionality

--- a/packages/components/src/Thumbnail/Thumbnail.css
+++ b/packages/components/src/Thumbnail/Thumbnail.css
@@ -1,7 +1,17 @@
 .thumbnail {
   --message-weight: 400;
+  display: inline-block;
+
+  position: relative;
 
   font-weight: var(--message-weight);
+}
+
+.deleteButton {
+  position: absolute;
+  top: var(--space-smaller);
+  right: var(--space-smaller);
+  z-index: 1;
 }
 
 .bold {
