--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -36,13 +36,14 @@
   flex-shrink: 0;
 }
 
-.imageBlock::before {
+.imageBlockOverlay::before {
   content: "";
-  display: block;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   background-color: var(--color-overlay);
   mix-blend-mode: multiply;
 }
