--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -6,7 +6,6 @@
   --file-card--border-color: var(--color-border);
   --file-card--accent-color: var(--color-grey);
   --file-card--base-padding: var(--space-small);
-  --border-basebackground: var(--color-surface--background);
 }
 
 .formatFile {
@@ -29,7 +28,7 @@
   padding: 0;
   border: var(--border-base);
   border-radius: var(--radius-base);
-  background-color: var(--border-basebackground);
+  background-color: var(--color-surface--background);
   background-repeat: no-repeat;
   background-size: cover;
   align-items: center;
@@ -77,7 +76,36 @@
   font-size: calc(var(--base-unit) * 0.625);
 }
 
+/*
 .thumbnailNonImagedefault::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  width: var(--space-base);
+  height: var(--space-base);
+  background: linear-gradient(270deg,
+      rgb(244, 244, 244) 38.46%,
+      rgba(244, 244, 244, 0) 100%);
+}
+
+.thumbnailNonImagelarge::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  width: var(--space-large);
+  height: var(--space-large);
+  background: linear-gradient(270deg,
+      rgb(244, 244, 244) 38.46%,
+      rgba(244, 244, 244, 0) 100%);
+} */
+
+.thumbnailNonImage::before {
   content: "";
   display: block;
   position: absolute;
@@ -93,20 +121,9 @@
   );
 }
 
-.thumbnailNonImagelarge::before {
-  content: "";
-  display: block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
+.thumbnailNonImage.thumbnailLarge::before {
   width: var(--space-large);
   height: var(--space-large);
-  background: linear-gradient(
-    270deg,
-    rgb(244, 244, 244) 38.46%,
-    rgba(244, 244, 244, 0) 100%
-  );
 }
 
 .thumbnail .fileContentWrapper {
