--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -36,6 +36,10 @@
   flex-shrink: 0;
 }
 
+.imageBlock:focus {
+  outline-color: var(--color-focus);
+}
+
 .imageBlockOverlay::before {
   content: "";
   top: 0;
@@ -75,35 +79,6 @@
   left: var(--space-smaller);
   font-size: calc(var(--base-unit) * 0.625);
 }
-
-/*
-.thumbnailNonImagedefault::before {
-  content: "";
-  display: block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  width: var(--space-base);
-  height: var(--space-base);
-  background: linear-gradient(270deg,
-      rgb(244, 244, 244) 38.46%,
-      rgba(244, 244, 244, 0) 100%);
-}
-
-.thumbnailNonImagelarge::before {
-  content: "";
-  display: block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  width: var(--space-large);
-  height: var(--space-large);
-  background: linear-gradient(270deg,
-      rgb(244, 244, 244) 38.46%,
-      rgba(244, 244, 244, 0) 100%);
-} */
 
 .thumbnailNonImage::before {
   content: "";
@@ -169,5 +144,4 @@
   position: absolute;
   top: var(--space-smaller);
   right: var(--space-smaller);
-  z-index: 1;
 }
