--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -97,6 +97,14 @@
   );
 }
 
+.thumbnailNonImage.thumbnailNonImageProgress::before {
+  background: linear-gradient(
+    270deg,
+    rgb(165, 165, 165) 38.46%,
+    rgba(244, 244, 244, 0) 100%
+  );
+}
+
 .thumbnailNonImage.thumbnailLarge::before {
   width: var(--space-large);
   height: var(--space-large);
