--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -40,6 +40,17 @@
   outline-color: var(--color-focus);
 }
 
+.imageBlock:hover::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-overlay);
+}
+
 .imageBlockOverlay::before {
   content: "";
   position: absolute;
