--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -48,6 +48,8 @@
   left: 0;
   width: 100%;
   height: 100%;
+  border: var(--border-base);
+  border-radius: var(--radius-base);
   background-color: var(--color-overlay);
 }
 
