--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -78,6 +78,38 @@
   height: inherit;
 }
 
+.fileContentWrapper::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: var(--space-base);
+  height: var(--space-base);
+  border: var(--border-base);
+  border-radius: var(--radius-base);
+  background: linear-gradient(
+    270deg,
+    rgb(244, 244, 244) 38.46%,
+    rgba(244, 244, 244, 0) 100%
+  );
+}
+
+.fileContentWrapper.fileContentWrapperInProgress::after {
+  border: var(--border-base);
+  border-radius: var(--radius-base);
+  background: linear-gradient(
+    270deg,
+    rgb(165, 165, 165) 38.46%,
+    rgba(244, 244, 244, 0) 100%
+  );
+}
+
+.fileContentWrapper.fileContentWrapperLarge::after {
+  width: var(--space-large);
+  height: var(--space-large);
+}
+
 .thumbnailFilename {
   display: flex;
   position: absolute;
@@ -92,39 +124,6 @@
   bottom: var(--space-smaller);
   left: var(--space-smaller);
   font-size: calc(var(--base-unit) * 0.625);
-}
-
-.thumbnailNonImage::before {
-  content: "";
-  display: block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  width: var(--space-base);
-  height: var(--space-base);
-  border: var(--border-base);
-  border-radius: var(--radius-base);
-  background: linear-gradient(
-    270deg,
-    rgb(244, 244, 244) 38.46%,
-    rgba(244, 244, 244, 0) 100%
-  );
-}
-
-.thumbnailNonImage.thumbnailNonImageProgress::before {
-  border: var(--border-base);
-  border-radius: var(--radius-base);
-  background: linear-gradient(
-    270deg,
-    rgb(165, 165, 165) 38.46%,
-    rgba(244, 244, 244, 0) 100%
-  );
-}
-
-.thumbnailNonImage.thumbnailLarge::before {
-  width: var(--space-large);
-  height: var(--space-large);
 }
 
 .thumbnail .fileContentWrapper {
