--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -8,7 +8,7 @@
   --file-card--base-padding: var(--space-small);
 }
 
-.formatFile {
+.expanded {
   display: flex;
   height: var(--file-card--height);
   border: var(--border-base) solid var(--file-card--border-color);
@@ -43,7 +43,8 @@
   outline-color: var(--color-focus);
 }
 
-.imageBlock.imageBlockHoverable:hover::after {
+.thumbnail:hover .imageBlock.imageBlockHoverable::after,
+.expanded .imageBlock.imageBlockHoverable:hover::after {
   content: "";
   display: block;
   position: absolute;
@@ -54,7 +55,8 @@
   background-color: var(--color-overlay);
 }
 
-.imageBlock.imageBlockCompact:hover::after {
+.thumbnail:hover .imageBlock.imageBlockCompact::after,
+.expanded .imageBlock.imageBlockCompact:hover::after {
   border: var(--border-base);
   border-radius: var(--radius-base);
 }
