--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -16,7 +16,6 @@
   overflow: hidden;
   background-color: var(--file-card--background-color);
   align-items: center;
-  outline-color: var(--color-focus);
 }
 
 .imageBlock {
@@ -40,7 +39,23 @@
 }
 
 .imageBlock:focus {
-  outline-color: var(--color-focus);
+  box-shadow: var(--shadow-focus);
+  outline: none;
+}
+
+.imageBlock:focus::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: var(--shadow-focus);
+  border: var(--border-base);
+  border-radius: var(--radius-base);
+  outline: none;
+  background-color: var(--color-overlay);
 }
 
 .thumbnail:hover .imageBlock.imageBlockHoverable::after,
