--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -58,8 +58,7 @@
   background-color: var(--color-overlay);
 }
 
-.thumbnail:hover .imageBlock.imageBlockHoverable::after,
-.expanded .imageBlock.imageBlockHoverable:hover::after {
+.imageBlock.imageBlockHoverable::after {
   content: "";
   display: block;
   position: absolute;
@@ -68,6 +67,13 @@
   width: 100%;
   height: 100%;
   background-color: var(--color-overlay);
+  opacity: 0;
+  transition: all var(--timing-base);
+}
+
+.thumbnail:hover .imageBlock.imageBlockHoverable::after,
+.expanded .imageBlock.imageBlockHoverable:hover::after {
+  opacity: 1;
 }
 
 .thumbnail:hover .imageBlock.imageBlockCompact::after,
