update colors css and fix some mdx lint

--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -64,6 +64,9 @@
   --color-request: var(--color-indigo);
   --color-quote: var(--color-pink);
   --color-job: var(--color-yellowGreen);
+  --color-visit: var(--color-green);
+  --color-task: var(--color-navy);
+  --color-event: var(--color-yellow);
   --color-invoice: var(--color-purple);
   --color-payments: var(--color-orange);
 
